fix(help-center): spacing between MTO sections (#2917)

--- a/src/pages/settings/contactForm/components/ContactFormMailtoReplacementSection/ContactFormMailtoReplacementSection.less
+++ b/src/pages/settings/contactForm/components/ContactFormMailtoReplacementSection/ContactFormMailtoReplacementSection.less
@@ -35,4 +35,8 @@
     .alert {
         margin-bottom: @layout-spacing-l;
     }
+
+    .replacedEmailsContainer {
+        margin-top: @layout-spacing-l; // sectionContainer-gap + layout-spacing-l = 48px from Design
+    }
 }
